# phpserz

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/corpus/: awbw.txt  sensors.txt
bench/: Cargo.toml
bench/src/: bench.rs  benchmarks.rs  criterion_main.rs  gungraun_main.rs
bench/src/benchmarks/: deserializer.rs  parser.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_php.rs
src/: de.rs  errors.rs  lib.rs  parser.rs  ser.rs
