[package]
publish = false
name = "phpserz-bench"
version = "0.0.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
description = "Criterion benchmark suite for phpserz."
homepage = "https://github.com/nickbabcock/phpserz/tree/master/bench"
repository = "https://github.com/nickbabcock/phpserz"
license = "MIT"
edition = "2021"

[workspace]

[lib]
bench = false

[[bench]]
name = "phpserz-bench-criterion"
harness = false
path = "src/criterion_main.rs"

[[bench]]
name = "phpserz-bench-gungraun"
harness = false
path = "src/gungraun_main.rs"

[dependencies]
criterion = "0.7.0"
phpserz = { path = ".." }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
gungraun = "0.17.2"

[profile.release]
debug = true

[profile.bench]
debug = true
